[gd_scene load_steps=8 format=2]

[ext_resource path="res://resources/maps/field000_m00.png" type="Texture" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://UI/Camera.gd" type="Script" id=3]
[ext_resource path="res://UI/UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/maps/field004_m00.png" type="Texture" id=5]
[ext_resource path="res://resources/maps/field003_m00.png" type="Texture" id=6]
[ext_resource path="res://resources/maps/field005_m00.png" type="Texture" id=7]

[node name="root" type="Node2D"]
script = ExtResource( 2 )

[node name="Lestania" type="Node2D" parent="."]

[node name="map" type="Sprite" parent="Lestania"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )
centered = false

[node name="Bloodbane Island" type="Node2D" parent="."]
visible = false

[node name="map" type="Sprite" parent="Bloodbane Island"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 6 )
centered = false

[node name="Phindym" type="Node2D" parent="."]
visible = false

[node name="map" type="Sprite" parent="Phindym"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )
centered = false

[node name="Acre Selund" type="Node2D" parent="."]
visible = false

[node name="map" type="Sprite" parent="Acre Selund"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 7 )
centered = false

[node name="camera" type="Camera2D" parent="." groups=["camera"]]
position = Vector2( 175, 258 )
current = true
zoom = Vector2( 0.1, 0.1 )
script = ExtResource( 3 )
map = NodePath("../Lestania/map")

[node name="ui" parent="." instance=ExtResource( 4 )]

[node name="rpc_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="markers_loaded" from="." to="ui" method="_on_root_markers_loaded"]
[connection signal="map_selected" from="ui" to="." method="_on_ui_map_selected"]
[connection signal="timeout" from="rpc_timer" to="." method="_on_rpc_timer_timeout"]
